tests reworked + improvements